<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenInGmaps">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:elevation="0dp"
        android:onClick="alnwickTownDirections"
        android:text="@string/open_map"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="258dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/alnwick_directions"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:elevation="0dp"
        android:onClick="newtonAycliffeDirections"
        android:text="@string/open_map"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="258dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/newton_aycliffe_directions"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:elevation="0dp"
        android:onClick="seatonBurnDirections"
        android:text="@string/open_map"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="258dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/seaton_burn_directions"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="258dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/whitby_directions"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:onClick="seatonBurnDirections"
        android:text="@string/open_map"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>